# transfermarkt-mcp

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  requirements.txt
mcp_server/: server.py
mcp_server/config/: settings.py
mcp_server/services/: club.py  competitions.py  players.py
src/: __init__.py
src/transfermarkt_mcp/: client.py  config.py  main.py  server.py
src/transfermarkt_mcp/tools/: __init__.py  clubs.py  competitions.py  players.py
tests/: __init__.py  conftest.py  test_clubs.py  test_competitions.py  test_players.py
