[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transfermarkt-mcp"
version = "0.1.0"
description = "MCP server for Transfermarkt football data"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "Emre Çalışır", email = "emrecalisir95@gmail.com"}
]
requires-python = ">=3.11"
keywords = ["mcp", "transfermarkt", "football", "soccer", "api", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/emreclsr/transfermarkt-mcp"
Repository = "https://github.com/emreclsr/transfermarkt-mcp"
Issues = "https://github.com/emreclsr/transfermarkt-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
transfermarkt-mcp = "transfermarkt_mcp.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true